# orca

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  PRD.md  README.md  TDD.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
agent/: guardrail.py  memory.py  orchestrator.py  response_composer.py  tool_router.py
agent/prompts/: __init__.py  agentic.txt  multi_turn.txt  prompt_loader.py  single_turn.txt
api/: main.py  rate_limiter.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/architecture/: page.tsx
dashboard/app/chat/: page.tsx
dashboard/app/evaluate/: page.tsx
dashboard/app/release/: page.tsx
dashboard/components/: ArchitectureDiagram.tsx  Sidebar.tsx
dashboard/lib/: api.ts
data/golden_dataset/: agentic_cases.json  multi_turn_cases.json  single_turn_cases.json
testing/: assertion_engine.py  autochat.py  judge.py  release_gate.py  scenario_registry.py
tests/: conftest.py  test_api.py  test_assertions.py  test_guardrail.py  test_memory.py  test_rate_limiter.py  test_release_gate.py  test_response_composer.py  test_scenario_registry.py  test_tool_router.py  test_tools.py
tools/: calculator_tool.py  database_tool.py  search_tool.py
